Refactor Arabic and English localization files for improved clarity and consistency

--- a/src/locales/ar/about.json
+++ b/src/locales/ar/about.json
@@ -1,31 +1,31 @@
 {
-  "title": "عن عقار دوت كوم",
-  "tagline": "بنغيّر طريقة المصريين في البحث عن بيتهم الجاي.",
-  "intro": "عقار دوت كوم منصة عقارية حديثة لمصر. بنسهّل عليك تكتشف، تعرض، وتقارن العقارات بمعلومات موثوقة وتجربة بسيطة.",
+  "title": "حول عقار دوت كوم",
+  "tagline": "نُعيد تعريف طريقة بحث المصريين عن منازلهم القادمة.",
+  "intro": "عقار دوت كوم هو منصة عقارية حديثة مخصصة لمصر، تهدف إلى تسهيل عملية اكتشاف العقارات، عرضها، ومقارنتها من خلال معلومات موثوقة وتجربة سلسة.",
   "missionTitle": "مهمتنا",
-  "missionBody": "نوفر لكل الناس في مصر طريقة سريعة وواضحة للإيجار أو الشراء أو البيع — من الاستوديوهات لحد الفلل — في مكان واحد.",
+  "missionBody": "توفير وسيلة سريعة، عادلة وشفافة للجميع في مصر لتأجير أو شراء أو بيع العقارات — من الاستوديوهات الصغيرة إلى الفلل العائلية — في مكان واحد.",
   "valuesTitle": "قيمنا",
   "values": [
     {
       "name": "الثقة",
-      "desc": "إعلانات موثقة، معلومات واضحة، وتواصل صادق."
+      "desc": "إعلانات موثقة، معلومات دقيقة، وتواصل نزيه."
     },
     {
       "name": "البساطة",
-      "desc": "بحث سريع، تصميم نظيف، وخطوات أقل لبيتك المناسب."
+      "desc": "بحث سريع، تصميم واضح، وخطوات أقل للوصول إلى المنزل المناسب."
     },
     {
-      "name": "الإتاحة",
-      "desc": "بنخدم كل المحافظات — مش المدن الكبيرة بس."
+      "name": "إتاحة الوصول",
+      "desc": "نخدم جميع المحافظات وليس المدن الكبرى فقط."
     }
   ],
-  "howItWorksTitle": "إزاي بتشتغل المنصة",
+  "howItWorksTitle": "كيفية عمل المنصة",
   "howItWorks": [
-    "ابحث حسب المحافظة والمدينة والمنطقة بفلاتر ذكية.",
-    "قارن الصور والأسعار والمساحات والمميزات المهمة بسرعة.",
-    "تواصل بأمان مع المالكين والوكلاء من خلال منصتنا."
+    "ابحث حسب المحافظة أو المدينة أو المنطقة باستخدام فلاتر ذكية.",
+    "قارن الصور والأسعار والمساحات والمميزات بسهولة.",
+    "تواصل بأمان مع الملاك أو الوكلاء عبر منصتنا."
   ],
-  "ctaTitle": "بنكبر مع المجتمع",
-  "ctaBody": "بنطلق مميزات جديدة على طول بملاحظاتكم. قول لنا تحب تشوف إيه بعد كده!",
+  "ctaTitle": "نبني مع المجتمع",
+  "ctaBody": "نُطلق ميزات جديدة باستمرار استنادًا إلى ملاحظاتكم. شاركونا آرائكم حول ما ترغبون برؤيته لاحقًا!",
   "contactButton": "تواصل معنا"
 }
