--- a/src/locales/ar/careers.json
+++ b/src/locales/ar/careers.json
@@ -1,29 +1,29 @@
 {
   "title": "الوظائف في عقار دوت كوم",
-  "hero": "انضم لينا وبِنى معانا منصة العقارات المحبوبة في مصر.",
-  "intro": "إحنا فريق صغير مركز على المنتج، بنطلق بسرعة ونتعلم من المستخدمين.",
-  "valuesTitle": "التجربة عندنا",
+  "hero": "انضم إلينا وساهم في بناء المنصة العقارية الرائدة في مصر.",
+  "intro": "نحن فريق صغير يركز على جودة المنتج، نعمل بسرعة ونتعلم باستمرار من المستخدمين لتحسين تجربتهم.",
+  "valuesTitle": "بيئة العمل لدينا",
   "values": [
     {
       "name": "المستخدم أولًا",
-      "desc": "بنتكلم مع المستخدمين أسبوعيًا وبنطلق اللي يفرق."
+      "desc": "نستمع إلى المستخدمين بشكل مستمر ونطور ما يحدث الفرق الحقيقي."
     },
     {
       "name": "المسؤولية",
-      "desc": "هتساهم في المنتج والعملية والثقافة."
+      "desc": "ستكون جزءًا من عملية تطوير المنتج والثقافة المؤسسية."
     },
     {
       "name": "السرعة",
-      "desc": "فِرق صغيرة، تأثير كبير، وت iterations سريعة."
+      "desc": "فِرق صغيرة، تأثير كبير، وتكرارات تطوير سريعة."
     }
   ],
   "openingsTitle": "الوظائف المتاحة",
-  "noOpenings": "مافيش وظائف مفتوحة حاليًا. ابعت السيرة الذاتية على {{careersEmail}} وهنكلمك أول ما يبقى في فرصة مناسبة.",
-  "perksTitle": "المميزات (مع النمو)",
+  "noOpenings": "لا توجد وظائف شاغرة حاليًا. يمكنك إرسال سيرتك الذاتية إلى careers@aqardot.com وسنتواصل معك عند توفر فرصة مناسبة.",
+  "perksTitle": "المزايا (مع نمو الفريق)",
   "perks": [
-    "ثقافة عمل مرنة عن بُعد داخل مصر",
-    "تأثير من أول يوم",
-    "ميزانية للتعلم والملكية (مخطط)"
+    "بيئة عمل مرنة عن بُعد داخل مصر",
+    "فرصة لإحداث تأثير منذ اليوم الأول",
+    "ميزانية للتعلم والتطوير (قيد الإعداد)"
   ],
-  "cta": "احكي لنا ليه حابب تشتغل على عقار دوت كوم"
+  "cta": "أخبرنا لماذا ترغب بالانضمام إلى فريق عقار دوت كوم"
 }
