--- a/src/locales/ar/contact.json
+++ b/src/locales/ar/contact.json
@@ -1,18 +1,16 @@
 {
   "title": "تواصل معنا",
-  "subtitle": "مبسوطين نسمع منك.",
-  "description": "عندك سؤال، اقتراح، أو شراكة؟ ابعت لنا رسالة — غالبًا بنرد بسرعة.",
+  "subtitle": "يسعدنا تواصلك معنا.",
+  "description": "هل لديك سؤال أو اقتراح أو ترغب في التعاون معنا؟ أرسل إلينا رسالة، وسنقوم بالرد في أقرب وقت ممكن.",
   "emailLabel": "البريد الإلكتروني",
   "emailValue": "{{contactEmail}}",
   "form": {
-    "name": "اسمك",
-    "email": "بريدك الإلكتروني",
+    "name": "الاسم",
+    "email": "عنوان البريد الإلكتروني",
     "subject": "الموضوع",
-    "message": "الرسالة",
+    "message": "نص الرسالة",
     "submit": "إرسال",
-    "success": "شكرًا! استلمنا رسالتك.",
-    "error": "حصل خطأ. جرّب تاني."
-  },
-  "altChannelsTitle": "طرق تواصل أخرى",
-  "altChannels": ["البريد: {{contactEmail}}", "السوشيال: @AqarDot (قريبًا)"]
+    "success": "شكرًا لك! لقد استلمنا رسالتك بنجاح.",
+    "error": "حدث خطأ أثناء الإرسال. يرجى المحاولة مرة أخرى."
+  }
 }
