--- a/src/locales/ar/impressum.json
+++ b/src/locales/ar/impressum.json
@@ -1,13 +1,20 @@
 {
   "title": "المعلومات القانونية",
   "note": "الصفحة دي بتعرض بيانات التواصل القانونية الخاصة بعقار دوت كوم.",
-  "legalName": "{{legalName}}",
-  "streetAddress": "{{streetAddress}}",
-  "cityPostal": "{{cityPostal}}",
+  "legalNameLabel": "الاسم القانوني",
+  "legalName": "عقار دوت",
+  "streetAddressLabel": "العنوان",
+  "streetAddress": "—",
+  "cityPostalLabel": "المدينة/الرمز البريدي",
+  "cityPostal": "—",
+  "countryLabel": "الدولة",
   "country": "مصر",
-  "email": "{{legalEmail}}",
-  "phone": "{{phoneOptional}}",
-  "responsiblePerson": "{{responsiblePerson}}",
+  "emailLabel": "البريد الإلكتروني",
+  "email": "contact@aqardot.com",
+  "phoneLabel": "رقم الهاتف",
+  "phone": "—",
+  "responsiblePersonLabel": "الشخص المسؤول",
+  "responsiblePerson": "إسلام علي",
   "disclaimerTitle": "إخلاء المسؤولية",
   "disclaimerBody": "بالرغم من مراجعة المحتوى بعناية، لا نتحمّل مسؤولية الروابط الخارجية. مسؤولو المواقع المرتبطة هم المسؤولون عن محتواها."
 }
