--- a/src/locales/ar/privacy.json
+++ b/src/locales/ar/privacy.json
@@ -1,64 +1,64 @@
 {
   "title": "سياسة الخصوصية",
   "lastUpdated": "{{lastUpdated}}",
-  "intro": "خصوصيتك مهمة لينا. السياسة دي بتوضح بنجمع إيه، ليه بنجمعه، وإزاي بنتعامل معاه داخل مصر.",
+  "intro": "خصوصيتك تهمنا. توضح هذه السياسة نوعية البيانات التي نقوم بجمعها، وأسباب جمعها، وكيفية التعامل معها داخل جمهورية مصر العربية.",
   "controller": {
     "title": "المسؤول عن البيانات",
-    "body": "عقار دوت كوم (\"إحنا\") هو المسؤول عن معالجة البيانات اللي بتتم عبر الموقع والتطبيقات."
+    "body": "عقار دوت هو المسؤول عن معالجة البيانات التي يتم جمعها من خلال الموقع الإلكتروني والتطبيقات التابعة له."
   },
   "dataWeCollect": {
-    "title": "البيانات اللي بنجمعها",
+    "title": "البيانات التي نقوم بجمعها",
     "items": [
-      "بيانات الحساب: الاسم، البريد الإلكتروني، الهاتف (لو وفّرتهم).",
-      "تفاصيل الإعلانات اللي بتنشرها (صور، أسعار، وعناوين حسب اختيارك).",
-      "بيانات الاستخدام: معلومات الجهاز، الصفحات، وتحليلات أساسية.",
-      "الرسائل المرسلة عبر نماذج التواصل."
+      "بيانات الحساب: الاسم، البريد الإلكتروني، ورقم الهاتف (في حال تقديمها).",
+      "تفاصيل الإعلانات التي تنشرها (مثل الصور، الأسعار، والعناوين التي تختار مشاركتها).",
+      "بيانات الاستخدام: معلومات الجهاز، الصفحات التي تتم زيارتها، وبعض التحليلات الأساسية.",
+      "الرسائل المرسلة من خلال نماذج التواصل."
     ]
   },
   "useOfData": {
-    "title": "استخدام البيانات",
+    "title": "كيفية استخدام البيانات",
     "items": [
       "تقديم وتحسين خدماتنا ومميزات المنصة.",
-      "إظهار نتائج عقارات مناسبة ومنع الاحتيال.",
-      "التواصل بخصوص حسابك أو إعلاناتك أو طلبات الدعم.",
-      "الالتزام القانوني حسب الحالة."
+      "عرض نتائج العقارات المناسبة ومنع حالات الاحتيال.",
+      "التواصل معك بشأن حسابك أو إعلاناتك أو طلبات الدعم الفني.",
+      "الامتثال للمتطلبات القانونية عند الحاجة."
     ]
   },
   "legalBasis": {
-    "title": "الأساس القانوني",
+    "title": "الأساس القانوني للمعالجة",
     "items": [
-      "موافقتك (زي إرسال النماذج).",
-      "تنفيذ التعاقد (لتقديم الخدمة المطلوبة).",
-      "المصلحة المشروعة (أمان المنصة والتحليلات)."
+      "موافقتك (مثل عند إرسال النماذج).",
+      "تنفيذ العقد (لتقديم الخدمة المطلوبة).",
+      "المصلحة المشروعة (مثل أمان المنصة والتحليلات الإحصائية)."
     ]
   },
   "sharing": {
     "title": "مشاركة البيانات",
-    "body": "مش بنبيع بياناتك. ممكن نشارك بيانات محدودة مع مزودي الخدمات (استضافة، بريد) تحت التزام بالسرية أو حسب القانون."
+    "body": "لا نقوم ببيع بياناتك الشخصية. قد نشارك بعض البيانات المحدودة مع مزودي الخدمات (مثل الاستضافة أو البريد الإلكتروني) تحت التزامات قانونية صارمة بالحفاظ على السرية أو وفقًا لما يتطلبه القانون."
   },
   "retention": {
-    "title": "مدة الاحتفاظ",
-    "body": "بنحتفظ بالبيانات للمدة اللازمة للأغراض اللي فوق أو حسب القانون، وبعدها بنحذفها أو بنجهّلها."
+    "title": "مدة الاحتفاظ بالبيانات",
+    "body": "نحتفظ بالبيانات فقط للمدة اللازمة للأغراض الموضحة أعلاه أو كما يفرض القانون، وبعد ذلك نقوم بحذفها أو إخفاء هويتها."
   },
   "security": {
-    "title": "الأمان",
-    "body": "بنستخدم إجراءات تقنية وتنظيمية معقولة لحماية البيانات. مفيش وسيلة آمنة 100٪."
+    "title": "أمان البيانات",
+    "body": "نستخدم إجراءات تقنية وتنظيمية مناسبة لحماية البيانات الشخصية، ومع ذلك لا توجد وسيلة نقل أو تخزين إلكتروني آمنة بنسبة 100٪."
   },
   "yourRights": {
     "title": "حقوقك",
     "items": [
-      "الوصول والتصحيح والحذف.",
-      "سحب الموافقة في الحالات المعتمدة على الموافقة.",
-      "الاعتراض على بعض المعالجات حسب القانون."
+      "الحق في الوصول إلى بياناتك وتصحيحها أو حذفها.",
+      "الحق في سحب الموافقة في الحالات التي تعتمد فيها المعالجة على موافقتك.",
+      "الحق في الاعتراض على بعض أنواع المعالجة وفقًا للقانون."
     ],
-    "contact": "لممارسة الحقوق، راسلنا على {{privacyEmail}}."
+    "contact": "لممارسة حقوقك، يُرجى التواصل معنا عبر البريد الإلكتروني contact@aqardot.com."
   },
   "international": {
-    "title": "النقل الدولي",
-    "body": "لو استخدمنا مزودين خارج مصر، بنطبق ضمانات مناسبة لحماية بياناتك."
+    "title": "نقل البيانات الدولي",
+    "body": "في حال الاستعانة بمزودي خدمات خارج جمهورية مصر العربية، نلتزم بتطبيق إجراءات وضمانات مناسبة لحماية بياناتك الشخصية."
   },
   "contact": {
-    "title": "التواصل",
-    "body": "عندك أسئلة عن الخصوصية؟ ابعت على {{privacyEmail}}."
+    "title": "التواصل معنا",
+    "body": "لأي استفسارات تتعلق بسياسة الخصوصية، يُرجى التواصل عبر البريد الإلكتروني contact@aqardot.com."
   }
 }
