--- a/src/locales/ar/terms.json
+++ b/src/locales/ar/terms.json
@@ -1,45 +1,45 @@
 {
   "title": "شروط الخدمة",
   "lastUpdated": "{{lastUpdated}}",
-  "intro": "أهلًا بك في عقار دوت كوم. باستخدامك للموقع أو التطبيقات، فأنت توافق على هذه الشروط.",
+  "intro": "مرحبًا بك في عقار دوت كوم. باستخدامك للموقع أو التطبيقات، فإنك توافق على الالتزام بهذه الشروط والأحكام.",
   "use": {
     "title": "استخدام المنصة",
     "items": [
-      "لازم يكون عمرك 18 سنة أو مع موافقة ولي الأمر.",
-      "قدّم بيانات صحيحة واتبِع القوانين المصرية المعمول بها.",
-      "أنت مسؤول عن حسابك وكل نشاطك."
+      "يجب ألا يقل عمرك عن 18 عامًا، أو أن تكون حاصلًا على موافقة ولي الأمر.",
+      "يجب تقديم بيانات صحيحة والالتزام بالقوانين المصرية المعمول بها.",
+      "أنت مسؤول عن حسابك وعن جميع الأنشطة التي تتم من خلاله."
     ]
   },
   "listings": {
     "title": "الإعلانات والمحتوى",
     "items": [
-      "لازم تكون مالك حقوق الصور والنصوص اللي بترفعها.",
-      "ممنوع الأسعار أو المواقع المضللة أو المحتوى المخالف.",
-      "من حقنا نراجع أو نحذف أو نقيّد المحتوى المخالف للشروط."
+      "يجب أن تمتلك حقوق الصور والنصوص التي تقوم برفعها.",
+      "يُحظر نشر أسعار أو مواقع مضللة أو أي محتوى مخالف.",
+      "يحق لنا مراجعة أو حذف أو تقييد أي محتوى ينتهك هذه الشروط."
     ]
   },
   "payments": {
-    "title": "المدفوعات (لو توفرت لاحقًا)",
-    "body": "لو قدّمنا خدمات مدفوعة لاحقًا، فأنت توافق على سداد الرسوم والضرائب. شروط الاسترجاع هتتحدد وقتها."
+    "title": "المدفوعات (إن وُجدت لاحقًا)",
+    "body": "في حال تقديم خدمات مدفوعة مستقبلًا، فإنك توافق على سداد الرسوم والضرائب المحددة. سيتم تحديد شروط الاسترجاع في حينها."
   },
   "disclaimer": {
     "title": "إخلاء المسؤولية",
-    "body": "إحنا منصة بتوصّل المستخدمين ببعض. مش مالكين أو مديرين لأي عقار ومش بنضمنه. المعاملات بتتم مباشرة بين المستخدمين."
+    "body": "نحن منصة تربط المستخدمين ببعضهم البعض، ولا نملك أو ندير أي عقار، ولا نضمن أي معاملة. تتم جميع المعاملات مباشرة بين المستخدمين."
   },
   "liability": {
     "title": "تحديد المسؤولية",
-    "body": "في الحدود اللي يسمح بيها القانون، مش مسؤولين عن أي أرباح فائتة أو بيانات مفقودة أو أضرار غير مباشرة ناتجة عن استخدامك للمنصة."
+    "body": "في حدود ما يسمح به القانون، لا نتحمل أي مسؤولية عن فقدان الأرباح أو البيانات أو أي أضرار غير مباشرة ناتجة عن استخدام المنصة."
   },
   "termination": {
     "title": "إيقاف الحساب",
-    "body": "ممكن نعلّق أو نقفل أي حساب يخالف الشروط أو يضر المستخدمين."
+    "body": "يجوز لنا تعليق أو إيقاف أي حساب ينتهك هذه الشروط أو يسبب ضررًا للمستخدمين الآخرين."
   },
   "changes": {
-    "title": "تغيير الشروط",
-    "body": "ممكن نحدّث الشروط. لو التغييرات جوهرية هنبلّغك بطريقة مناسبة. استمرار الاستخدام يعني موافقتك."
+    "title": "تعديل الشروط",
+    "body": "يجوز لنا تحديث هذه الشروط من وقت لآخر. وفي حال كانت التغييرات جوهرية، سنقوم بإخطارك بطريقة مناسبة. استمرارك في استخدام المنصة يُعد موافقة منك على التعديلات."
   },
   "contact": {
     "title": "التواصل",
-    "body": "عندك أسئلة عن الشروط؟ راسلنا على {{legalEmail}}."
+    "body": "لأي استفسارات بخصوص هذه الشروط، يُرجى التواصل معنا عبر البريد الإلكتروني contact@aqardot.com."
   }
 }
