--- a/src/locales/en/careers.json
+++ b/src/locales/en/careers.json
@@ -18,7 +18,7 @@
     }
   ],
   "openingsTitle": "Open Roles",
-  "noOpenings": "No open roles right now. Send your resume to {{careersEmail}} and we’ll reach out when something fits.",
+  "noOpenings": "No open roles right now. Send your resume to careers@aqardot.com and we’ll reach out when something fits.",
   "perksTitle": "Perks (as we grow)",
   "perks": [
     "Remote-friendly culture in Egypt",
