--- a/src/locales/en/impressum.json
+++ b/src/locales/en/impressum.json
@@ -1,13 +1,20 @@
 {
   "title": "Impressum",
   "note": "This page provides legal contact information for AqarDot.com.",
-  "legalName": "{{legalName}}",
-  "streetAddress": "{{streetAddress}}",
-  "cityPostal": "{{cityPostal}}",
+  "legalNameLabel": "Legal Name",
+  "legalName": "AqarDot",
+  "streetAddressLabel": "Address",
+  "streetAddress": "—",
+  "cityPostalLabel": "City/Postal",
+  "cityPostal": "—",
+  "countryLabel": "Country",
   "country": "Egypt",
-  "email": "{{legalEmail}}",
-  "phone": "{{phoneOptional}}",
-  "responsiblePerson": "{{responsiblePerson}}",
+  "emailLabel": "Email",
+  "email": "contact@aqardot.com",
+  "phoneLabel": "Phone",
+  "phone": "—",
+  "responsiblePersonLabel": "Responsible Person",
+  "responsiblePerson": "Eslam Aly",
   "disclaimerTitle": "Disclaimer",
   "disclaimerBody": "Despite careful content control, we assume no liability for external links. The operators of linked pages are solely responsible for their content."
 }
