--- a/src/locales/en/terms.json
+++ b/src/locales/en/terms.json
@@ -40,6 +40,6 @@
   },
   "contact": {
     "title": "Contact",
-    "body": "Questions about these Terms? Email {{legalEmail}}."
+    "body": "Questions about these Terms? Email contact@aqardot.com."
   }
 }
