--- a/src/locales/ar/footer.json
+++ b/src/locales/ar/footer.json
@@ -2,7 +2,7 @@
   "footer": {
     "rightsReserved": "جميع الحقوق محفوظة © {{year}}",
     "aqarDot": "عقار دوت",
-    "paragraph": "منصتك الموثوقة لشراء وبيع وتأجير العقارات بسهولة وثقة.",
+    "paragraph": "منصتك الموثوقة  لبيع وشراء وتأجير العقارات بسهولة وأمان.",
     "explore": {
       "title": "استكشف",
       "buy": "شراء",
