feat: enhance sharing functionality and improve localization in listing component

--- a/src/locales/ar/impressum.json
+++ b/src/locales/ar/impressum.json
@@ -1,6 +1,6 @@
 {
   "title": "المعلومات القانونية",
-  "note": "الصفحة دي بتعرض بيانات التواصل القانونية الخاصة بعقار دوت كوم.",
+  "note": " هذه الصفحة تعرض بيانات التواصل القانونية الخاصة بموقع عقار دوت .",
   "legalNameLabel": "الاسم القانوني",
   "legalName": "عقار دوت",
   "streetAddressLabel": "العنوان",
