--- a/src/locales/ar/listing.json
+++ b/src/locales/ar/listing.json
@@ -68,6 +68,8 @@
     "meter": "م",
     "callSeller": "اتصل بالمُعلن",
     "contactWhatsApp": "واتساب",
-    "hello": "مرحبًا، أنا مهتم بهذا الإعلان"
+    "hello": "مرحبًا، أنا مهتم بهذا الإعلان",
+    "shareMessage": "تحقق من هذا الإعلان",
+    "copied": "تم نسخ الرابط!"
   }
 }
