--- a/src/locales/en/listing.json
+++ b/src/locales/en/listing.json
@@ -69,6 +69,8 @@
     "meter": "m",
     "callSeller": "Call seller",
     "contactWhatsApp": " WhatsApp",
-    "hello": "Hello, I'm interested in this listing"
+    "hello": "Hello, I'm interested in this listing",
+    "shareMessage": "Check out this listing",
+    "copied": "Link copied!"
   }
 }
