feat: update share message formatting and remove console logs for cleaner code

--- a/src/locales/ar/about.json
+++ b/src/locales/ar/about.json
@@ -1,5 +1,5 @@
 {
-  "title": "حول عقار دوت كوم",
+  "title": "حول عقار دوت ",
   "tagline": "نُعيد تعريف طريقة بحث المصريين عن منازلهم القادمة.",
   "intro": "عقار دوت كوم هو منصة عقارية حديثة مخصصة لمصر، تهدف إلى تسهيل عملية اكتشاف العقارات، عرضها، ومقارنتها من خلال معلومات موثوقة وتجربة سلسة.",
   "missionTitle": "مهمتنا",
