--- a/src/locales/ar/listing.json
+++ b/src/locales/ar/listing.json
@@ -69,7 +69,7 @@
     "callSeller": "اتصل بالمُعلن",
     "contactWhatsApp": "واتساب",
     "hello": "مرحبًا، أنا مهتم بهذا الإعلان",
-    "shareMessage": "تحقق من هذا الإعلان",
+    "shareMessage": "تحقق من هذا الإعلان!",
     "copied": "تم نسخ الرابط!"
   }
 }
