--- a/src/locales/en/listing.json
+++ b/src/locales/en/listing.json
@@ -70,7 +70,7 @@
     "callSeller": "Call seller",
     "contactWhatsApp": " WhatsApp",
     "hello": "Hello, I'm interested in this listing",
-    "shareMessage": "Check out this listing",
+    "shareMessage": "Check out this listing!",
     "copied": "Link copied!"
   }
 }
