feat: update footer links to use React Router's Link component for improved navigation feat: enhance language detection and storage in i18n configuration fix: correct platform name in English and Arabic about sections

--- a/src/locales/ar/about.json
+++ b/src/locales/ar/about.json
@@ -1,7 +1,7 @@
 {
   "title": "حول عقار دوت ",
   "tagline": "نُعيد تعريف طريقة بحث المصريين عن منازلهم القادمة.",
-  "intro": "عقار دوت كوم هو منصة عقارية حديثة مخصصة لمصر، تهدف إلى تسهيل عملية اكتشاف العقارات، عرضها، ومقارنتها من خلال معلومات موثوقة وتجربة سلسة.",
+  "intro": "عقار دوت هو منصة عقارية حديثة مخصصة لمصر، تهدف إلى تسهيل عملية اكتشاف العقارات، عرضها، ومقارنتها من خلال معلومات موثوقة وتجربة سلسة.",
   "missionTitle": "مهمتنا",
   "missionBody": "توفير وسيلة سريعة، عادلة وشفافة للجميع في مصر لتأجير أو شراء أو بيع العقارات — من الاستوديوهات الصغيرة إلى الفلل العائلية — في مكان واحد.",
   "valuesTitle": "قيمنا",
