--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -1,7 +1,7 @@
 {
-  "title": "About AqarDot.com",
+  "title": "About AqarDot",
   "tagline": "We’re redefining how Egyptians find their next home.",
-  "intro": "AqarDot.com is a modern real-estate platform built for Egypt. We make it simple to discover, list, and compare properties with trustworthy details and a smooth experience.",
+  "intro": "AqarDot is a modern real-estate platform built for Egypt. We make it simple to discover, list, and compare properties with trustworthy details and a smooth experience.",
   "missionTitle": "Our Mission",
   "missionBody": "Give everyone in Egypt a fast, fair, and transparent way to rent, buy, or sell property — from cozy studios to family villas — all in one place.",
   "valuesTitle": "What We Value",
