feat: enhance authentication flow with error handling, password reset, and email verification features

--- a/src/locales/ar/auth.json
+++ b/src/locales/ar/auth.json
@@ -14,8 +14,38 @@
     "signingUp": "جارٍ إنشاء الحساب...",
     "errorInvalidCredentials": "اسم المستخدم أو كلمة المرور غير صحيحة.",
     "errorUserExists": "اسم المستخدم أو البريد الإلكتروني مستخدم بالفعل.",
+    "errorUserNotFound": "المستخدم غير موجود.",
+    "errorEmailNotVerified": "يرجى تأكيد بريدك الإلكتروني قبل تسجيل الدخول.",
+    "errorMissingFields": "اسم المستخدم والبريد الإلكتروني وكلمة المرور مطلوبة.",
+    "errorMissingCredentials": "البريد الإلكتروني وكلمة المرور مطلوبان.",
     "errorPasswordMismatch": "كلمات المرور غير متطابقة.",
     "errorGeneric": "حدث خطأ ما.",
-    "continueWithGoogle": "المتابعة عبر جوجل"
+    "continueWithGoogle": "المتابعة عبر جوجل",
+    "resetPasswordTitle": "إعادة تعيين كلمة المرور",
+    "newPassword": "كلمة مرور جديدة",
+    "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+    "updatePassword": "تحديث كلمة المرور",
+    "passwordUpdated": "تم تحديث كلمة المرور.",
+    "passwordUpdating": "جارٍ التحديث...",
+    "passwordRequirementsTitle": "يجب أن تتضمن كلمة المرور:",
+    "passwordRequirementLength": "ثمانية أحرف على الأقل",
+    "passwordRequirementUpper": "حرفًا كبيرًا واحدًا",
+    "passwordRequirementLower": "حرفًا صغيرًا واحدًا",
+    "passwordRequirementNumber": "رقمًا واحدًا",
+    "passwordRequirementSymbol": "رمزًا خاصًا واحدًا",
+    "passwordsDoNotMatch": "كلمتا المرور غير متطابقتين.",
+    "passwordNotStrongEnough": "يرجى استيفاء جميع متطلبات كلمة المرور.",
+    "emailVerifiedTitle": "تم تأكيد البريد الإلكتروني",
+    "emailVerifiedBody": "تم تأكيد حسابك بنجاح.",
+    "emailVerifiedCta": "سجّل الدخول إلى حسابك",
+    "loading": "جارٍ التحميل...",
+    "forgotPassword": "هل نسيت كلمة المرور؟",
+    "verifyEmailSent": "لقد أرسلنا لك بريدًا إلكترونيًا للتأكيد. يرجى التحقق من بريدك الوارد.",
+    "enterEmailFirst": "يرجى إدخال بريدك الإلكتروني أولًا.",
+    "resetLinkSent": "إذا كان الحساب موجودًا، فسيصلك رابط إعادة التعيين على بريدك الإلكتروني.",
+    "resendVerification": "إعادة إرسال بريد التفعيل",
+    "resendVerificationCountdown": "يمكن الإرسال بعد {{seconds}} ثانية",
+    "resendVerificationSent": "إذا كان الحساب موجودًا، فسيتم إرسال بريد التفعيل.",
+    "sendingVerification": "جاري إرسال بريد التفعيل..."
   }
 }
