--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -14,8 +14,38 @@
     "signingUp": "Signing Up...",
     "errorInvalidCredentials": "Invalid username or password.",
     "errorUserExists": "Username or email already in use.",
+    "errorUserNotFound": "User not found.",
+    "errorEmailNotVerified": "Please verify your email before logging in.",
+    "errorMissingFields": "Username, email, and password are required.",
+    "errorMissingCredentials": "Email and password are required.",
     "errorPasswordMismatch": "Passwords do not match.",
     "errorGeneric": "Something went wrong.",
-    "continueWithGoogle": "Continue with Google"
+    "continueWithGoogle": "Continue with Google",
+    "resetPasswordTitle": "Reset your password",
+    "newPassword": "New password",
+    "confirmNewPassword": "Confirm new password",
+    "updatePassword": "Update password",
+    "passwordUpdated": "Password updated.",
+    "passwordUpdating": "Updating...",
+    "passwordRequirementsTitle": "Your password must include:",
+    "passwordRequirementLength": "At least 8 characters",
+    "passwordRequirementUpper": "One uppercase letter",
+    "passwordRequirementLower": "One lowercase letter",
+    "passwordRequirementNumber": "One number",
+    "passwordRequirementSymbol": "One special character",
+    "passwordsDoNotMatch": "Passwords do not match.",
+    "passwordNotStrongEnough": "Please meet all password requirements.",
+    "emailVerifiedTitle": "Email verified",
+    "emailVerifiedBody": "Your account has been verified successfully.",
+    "emailVerifiedCta": "Sign in to your account",
+    "loading": "Loading...",
+    "forgotPassword": "Forgot password?",
+    "verifyEmailSent": "We just sent you a verification email. Please check your inbox.",
+    "enterEmailFirst": "Please enter your email above first.",
+    "resetLinkSent": "If the account exists, a password reset link has been sent to your email.",
+    "resendVerification": "Resend verification email",
+    "resendVerificationCountdown": "Resend available in {{seconds}}s",
+    "resendVerificationSent": "If the account exists, a verification email has been sent.",
+    "sendingVerification": "Sending verification email..."
   }
 }
