feat: add password reset countdown and update verification messages in authentication flow

--- a/src/locales/ar/auth.json
+++ b/src/locales/ar/auth.json
@@ -46,6 +46,8 @@
     "resendVerification": "إعادة إرسال بريد التفعيل",
     "resendVerificationCountdown": "يمكن الإرسال بعد {{seconds}} ثانية",
     "resendVerificationSent": "إذا كان الحساب موجودًا، فسيتم إرسال بريد التفعيل.",
-    "sendingVerification": "جاري إرسال بريد التفعيل..."
+    "sendingVerification": "جاري إرسال بريد التفعيل...",
+    "resetCountdown": "يرجى الانتظار لمدة {{seconds}} ثانية قبل المحاولة مجددًا.",
+    "resetCountdownShort": "انتظر {{seconds}} ث"
   }
 }
