--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -46,6 +46,8 @@
     "resendVerification": "Resend verification email",
     "resendVerificationCountdown": "Resend available in {{seconds}}s",
     "resendVerificationSent": "If the account exists, a verification email has been sent.",
-    "sendingVerification": "Sending verification email..."
+    "sendingVerification": "Sending verification email...",
+    "resetCountdown": "Please wait {{seconds}}s before trying again.",
+    "resetCountdownShort": "Wait {{seconds}}s"
   }
 }
